--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -10,6 +10,7 @@
         android:id="@+id/tv_result"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -17,18 +18,20 @@
         android:textAlignment="center"
         android:textAppearance="@android:style/TextAppearance.Material.Title"
         android:textSize="60sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_result_title2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_result_title" />
 
     <TextView
         android:id="@+id/tv_result_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:text="Ihr Ergebnis:"
+        android:textAlignment="center"
         android:textAppearance="@android:style/TextAppearance.Material.Title"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,34 +39,39 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_perfect"
+        android:id="@+id/tv_result_title2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="PERFEKT!"
+        android:layout_marginTop="16dp"
+        android:text="Spieler2 Ergebnis:"
         android:textAlignment="center"
         android:textAppearance="@android:style/TextAppearance.Material.Title"
-        android:textSize="35sp"
-        android:visibility="visible"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_result_opponent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_result" />
 
     <TextView
-        android:id="@+id/tv_highscore"
+        android:id="@+id/tv_result_opponent"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="67dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Neuer Highscore"
+        android:text="0 / 0"
         android:textAlignment="center"
         android:textAppearance="@android:style/TextAppearance.Material.Title"
-        android:textSize="30sp"
+        android:textSize="50sp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_perfect" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_result_title2" />
 
 </android.support.constraint.ConstraintLayout>
